--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,7 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+*State status*
+------------------------------
+- 0 : detected
+- 1 : copied from in_directory to working_directory
+- 2 : transcoded
+- 3 : copied from working_directory to out_directory
+- 4 : ready for purge 
